--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
+    "@types/ws": "^8.18.1",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
