--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,8 @@
     "@types/node": "^24.10.0",
     "@types/ws": "^8.18.1",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "websocket": "^1.0.35"
+    "websocket": "^1.0.35",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
